[package]
name = "bust"
version = "0.1.0"
edition = "2021"
description = "Bus timetable and public transit data in your terminal, in rust."
author = "facklambda"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.10", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }